# xyntra

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  xyntra.py  xyntra_cli.py
alembic/: env.py
api/: __init__.py
artifacts/: __init__.py  diff_manager.py  exporter.py  storage.py  versioning.py
context/: __init__.py  assembler.py  compactor.py  project_bootstrap.py  retrieval.py  selector.py  semantic_cache.py  token_budget.py
core/: __init__.py  config.py  database.py  events.py  logging.py  ollama_provisioner.py  rate_limiter.py  redis.py  security.py  telemetry.py
docs/: RELEASE_1_0_0.md  V2_MOATS_AND_DIFFERENTIATORS.md
memory/: __init__.py  preference_memory.py  project_memory.py  session_memory.py  summary_memory.py
models/: __init__.py  api_key.py  approval.py  artifact.py  base.py  dead_letter.py  decision.py  memory_summary.py  message.py  project.py  project_state.py  prompt_template.py  provider_call.py  retrieved_context.py  semantic_cache.py  session.py  spend_record.py  task.py  task_run.py  tool_definition.py  user.py  webhook.py
policies/: __init__.py  approval.py  content_guard.py  cost.py  injection_guard.py  pii_detector.py  privacy.py  routing_policy.py
providers/: __init__.py  _base_http.py  anthropic_adapter.py  capability_registry.py  deepseek_adapter.py  gemini_adapter.py  grok_adapter.py  groq_adapter.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py  registry.py  tool_registry.py
routing/: __init__.py  budgeter.py  fallback.py  (+6 more)
(+158 files in other folders)
