[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyntra"
version = "1.0.0"
description = "Local-machine AI execution control plane."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "pgvector>=0.3.6",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "openai>=1.76.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[project.scripts]
xyntra = "xyntra_cli:main"
xyntra-api = "main:run"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"api/v1/*.py" = ["B008"]
"alembic/versions/*.py" = ["E501", "I001"]

[tool.setuptools]
py-modules = ["main", "xyntra_cli"]

[tool.setuptools.packages.find]
include = [
  "api*",
  "artifacts*",
  "context*",
  "core*",
  "memory*",
  "models*",
  "policies*",
  "providers*",
  "routing*",
  "services*",
  "tasks*",
  "verification*",
  "workers*",
]
